--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
+allow-list.php
+block-countries.php
 block-list.php
 block-regexes-uri.php
 block-regexes-payload.php
-allow-list.php
 waf-errors.log
